tests/baselines/reference/parserComputedPropertyName38.errors.txt
parserComputedPropertyName38.ts(2,6): error TS1213: Identifier expected. 'public' is a reserved word in strict mode. Class definitions are automatically in strict mode.
parserComputedPropertyName38.ts(2,6): error TS2304: Cannot find name 'public'.


==== parserComputedPropertyName38.ts (2 errors) ====
    class C {
        [public]() { }
         ~~~~~~
!!! error TS1213: Identifier expected. 'public' is a reserved word in strict mode. Class definitions are automatically in strict mode.
         ~~~~~~
!!! error TS2304: Cannot find name 'public'.
    }